_sass/_components.header.scss
$header-height--desktop: 101px; // 1px border
$header-height--mobile: 67px; // 1px border

.header {
  @extend %clearfix;

  padding: rhythm(3) 0;
  border-bottom: solid 1px $border-color;
  background: white;
  &__description p {
    margin-top: 5px;
    font-size: 24px;
    line-height: 1.2;
  }
  &__navigation {
    display: flex;
    justify-content: flex-end;

    .subscribe-form {
      display: flex;
      width: 360px;
      order: 1;
      margin-left: rhythm(4);

      &__email {
        @include input-style(default);
        border-right: 0;
        font-size: ms(-1);
        flex-basis: 70%;
      }

      &__submit {
        flex-basis: 40%;
      }
    }
  }

  // start primary navigation
  .navigation {
    display: flex;
    align-items: center;

    &__items {
      margin: 0;
      padding: 0;
      text-align: right;
    }

    &__item {
      display: inline-block;
      margin: 0 rhythm(1);

      &:first-child {
        margin-left: 0;
      }

      &:last-child {
        margin: 0 0 0 rhythm(1);
      }
    }

    &__link {
      line-height: rhythm(4);
      display: inline-block;
      padding: 0 rhythm(1);

      &--active {
        color: $text-color-soft;
      }

      &:hover {
        color: $text-color-soft;
      }
    }

    &__button {
      font-size: ms(0);
      margin-left: rhythm(1);
    }

    &-dropdown__menu .navigation__link {
      display: block;
      line-height: 1.2;
    }
  }

  &__logo {
    float: left;
  }

  &__subtitle {
    > p {
      font-size: 32px;
      line-height: 37.92px;
    }

    > h2,
    > h3 {
      font-weight: 400;
      line-height: rhythm(4);
      margin: rhythm(2) 0 rhythm(2);
    }

    > h2 {
      font-size: ms(2);
    }

    > h3,
    > h4 {
      font-size: ms(1);
    }

    > ul {
      @extend %list-styled;
    }
  }

  &__button {
    @extend %button--large;
    margin-top: rhythm(2);
    margin-right: rhythm(3);

    &-group {
      a {
        display: inline-block;

        &.header__link {
          margin-left: 0;
        }
      }
    }
  }

  &__link {
    @include link-style;

    margin-left: rhythm(5);
    padding-bottom: rhythm(1);
    border-bottom: solid 2px $border-color;
  }

  &-mobile-button {
    display: none;
  }
}

// hero header for homepage
.hero {
  position: relative;
  padding-top: rhythm(14);
  padding-bottom: rhythm(21);
  background: $header-hero-background-color;
  background-size: 47% !important;

  &-new-updated-dressipi {
    background-color: white !important;
  }

  &-resourcesblog,
  &-blogcategoriesretail,
  &-blogcategoriesdata,
  &-blogcategoriestech {
    display: none;
  }

  &__content {
    float: left;
    width: calc-columns-width(5);
    max-width: 580px;

    &--extend {
      @include margin-center;
      @include text-center;

      max-width: calc-columns-width(7);
    }

    &--full {
      @include margin-center;
      @include text-center;

      max-width: 100%;
    }
  }

  .banner-page-title-wrapper {
    display: flex;

    img {
      width: 32px;
      height: 32px;
      margin-right: 10px;
    }

    .banner-page-title {
      text-transform: uppercase;
      line-height: 30px;
      font-size: 24px;
      margin-bottom: 15px;
    }
  }

  .index {
    background: #000 url(/uploads/banner-home.jpeg) no-repeat 50%;
    background-size: 54% !important;
  }

  // hero header for content pages
  &-content {
    padding-top: rhythm(14);
    padding-bottom: rhythm(14);

    .header__title {
      font-size: ms(7);
      line-height: rhythm(7);
      margin: 0 0 rhythm(1) 0;
    }

    .twitter-logo {
      width: 30px;
      margin-bottom: -10px;
    }
  }

  &-content.hero-customers {
    .hero__content {
      float: none;
      width: auto;
      max-width: none;

      .customer-banner {
        float: left;

        .header__title {
          max-width: 545px;
        }
      }
    }
  }

  &-content.hero-platform {
    background: #000 url(/uploads/banner-solutions-overview.jpg) no-repeat 50% !important;
    background-size: contain !important;
    padding-bottom: 200px;
    padding-top: 200px;
  }

  &--tight {
    padding-top: rhythm(5);
    padding-bottom: rhythm(5);
  }
}

.index {
  background: #000 url(/uploads/banner-home.jpeg) no-repeat 50% !important;
  background-size: contain !important;
  padding-top: 330px;
  padding-bottom: 330px;

  .landing {
    .hero__content {
      width: auto;
      max-width: 1130px;
      position: relative;

      .index-banner {
        position: absolute;
        bottom: -215px;
        left: 438px;
        max-width: 640px;
        width: 650px;

        h1 {
          margin-bottom: 51px;
          font-size: 3rem;
          line-height: 66px;
          color: #fff;
        }

        .header__subtitle > p {
          font-size: 20px;
          max-width: 467px;
          color: #fff;
          margin-left: auto;
          margin-right: auto;
        }

        .header__button-group {
          text-align: center;
        }
      }
    }
  }
}
/* ... */

